--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     </header>
     <section>
       <h3>Cat Facts</h3>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Ocelot_(Jaguatirica)_Zoo_Itatiba.jpg/440px-Ocelot_(Jaguatirica)_Zoo_Itatiba.jpg">
+      <p>The ocelot (Leopardus pardalis), also known as the dwarf leopard, is a wild <a href="https://en.wikipedia.org/wiki/Felidae">cat</a> distributed extensively within South America, including the islands of Trinidad and Margarita, Central America, and Mexico.</p>
+    </section>
+    <section>
+     <h3>Taxonomy</h3>
       <table><tr><td>Name</td><td>Location</td></tr>
         <tr><td>aequatorialis</td><td>Costa Rica</td></tr>
         <tr><td>albescens</td><td>Texas</td></tr>
